force-app/main/default/objects/Opportunity/fields/Dropshipper__c.field-meta.xml
<CustomField>
    <fullName>Dropshipper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records if the store is a dropshipper.</description>
    <inlineHelpText>Records if the store is a dropshipper.</inlineHelpText>
    <label>Dropshipper</label>
    <type>Checkbox</type>
</CustomField>