force-app/main/default/objects/Opportunity/fields/How_Did_They_Hear_About_Us_Detail__c.field-meta.xml
<CustomField>
    <fullName>How_Did_They_Hear_About_Us_Detail__c</fullName>
    <description>Records in greater detail how they heard about us.</description>
    <inlineHelpText>Records in greater detail how they heard about us.</inlineHelpText>
    <label>How Did They Hear About Us Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2X Ecommerce</fullName>
            </value>
            <value>
                <fullName>5-Minute Pitch</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>BigCommerce</fullName>
            </value>
            <value>
                <fullName>Brex</fullName>
            </value>
            <value>
                <fullName>Brex Partnership</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>Clearbanc</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>CRM Platforms</fullName>
            </value>
            <value>
                <fullName>DuctTape Marketing</fullName>
            </value>
            <value>
                <fullName>Ecommerce Fuel</fullName>
            </value>
            <value>
                <fullName>Ecommerce Fuel Live</fullName>
            </value>
            <value>
                <fullName>Ecommerce Influence</fullName>
            </value>
            <value>
                <fullName>Ecommerce Uncensored</fullName>
            </value>
            <value>
                <fullName>Email List Tools</fullName>
            </value>
            <value>
                <fullName>Entrepreneur on Fire</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>Future Commerce</fullName>
            </value>
            <value>
                <fullName>G2 Crowd</fullName>
            </value>
            <value>
                <fullName>GetApp</fullName>
            </value>
            <value>
                <fullName>Glossy</fullName>
            </value>
            <value>
                <fullName>Helpdesk Software</fullName>
            </value>
            <value>
                <fullName>IRCE</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Marketing Tools</fullName>
            </value>
            <value>
                <fullName>Masterclassing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>