force-app/main/default/objects/Opportunity/fields/Initial_Scheduled_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Scheduled_Demo_Date__c</fullName>
    <description>The first scheduled date of the demo/call with an an AE.</description>
    <inlineHelpText>The first scheduled date of the demo/call with an an AE.</inlineHelpText>
    <label>Initial Scheduled Demo Date</label>
    <type>Date</type>
</CustomField>