force-app/main/default/objects/Opportunity/fields/LEAD_Flip_Channel__c.field-meta.xml
<CustomField>
    <fullName>LEAD_Flip_Channel__c</fullName>
    <inlineHelpText>Maps from lead. The channel through which the Lead was flipped.</inlineHelpText>
    <label>Stage 0 Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flip_Channel</valueSetName>
    </valueSet>
</CustomField>