force-app/main/default/objects/Opportunity/fields/LEAD_Flip_List_Size_by_Bucket__c.field-meta.xml
<CustomField>
    <fullName>LEAD_Flip_List_Size_by_Bucket__c</fullName>
    <inlineHelpText>Maps from Lead. The size of a lead when it was flipped to sales</inlineHelpText>
    <label>List Size by Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flip_List_Size_by_Bucket</valueSetName>
    </valueSet>
</CustomField>