force-app/main/default/objects/Opportunity/fields/of_Email_Contacts__c.field-meta.xml
<CustomField>
    <fullName>of_Email_Contacts__c</fullName>
    <description>The number of contacts (= email addresses) in the prospect or customer&apos;s database.</description>
    <inlineHelpText>The number of contacts (= email addresses) in the prospect or customer&apos;s database.</inlineHelpText>
    <label># of Email Contacts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>