force-app/main/default/objects/Opportunity/fields/of_SMS_Credits__c.field-meta.xml
<CustomField>
    <fullName>of_SMS_Credits__c</fullName>
    <description>Records the estimated number of SMS credits needed.</description>
    <inlineHelpText>Records the estimated number of SMS credits needed.</inlineHelpText>
    <label># of SMS Credits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>