force-app/main/default/objects/Opportunity/fields/SALES_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>SALES_Closed_Lost_Reason__c</fullName>
    <inlineHelpText>Reason why Opportunity is lost.</inlineHelpText>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bad Timing</fullName>
            </value>
            <value>
                <fullName>Feature/Functionality Gap</fullName>
            </value>
            <value>
                <fullName>Lack of Resources</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Legal/Procurement</fullName>
            </value>
            <value>
                <fullName>Reason Unknown</fullName>
            </value>
            <value>
                <fullName>Churn Save</fullName>
            </value>
            <value>
                <fullName>No show at meeting</fullName>
            </value>
            <value>
                <fullName>No action taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>